# lottery-adviser

./: .env  .gitignore  COMMANDS.md  DEVELOPMENT.md  QUICKSTART.md  README.md  SETUP.md  check_columns.py  docker-compose.yml  file_info.json  file_structure.txt  privacy.html  pyproject.toml  range_test.txt  terms.html  test_all_strategies.py  test_cli_quick.py  test_debug.py  test_generator.py  test_range.py  test_simple.py
app/: __init__.py  config.py
app/analysis/: __init__.py  statistics_service.py  strategy_generator.py
app/collectors/: __init__.py  lottery_collector.py
app/pipelines/: __init__.py  update_and_analyze.py
app/storage/: __init__.py  history_repository.py
backend/: .env.example  .gitignore  CONTINUE_MIGRATION.md  DEPLOYMENT.md  FORCE_REDEPLOY.md  MIGRATION_COMPLETE.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  TROUBLESHOOTING_404.md  render.yaml  requirements.txt
backend/app/: main.py
backend/docs/: SETUP.md
backend/scripts/: check_file.py  migrate_data.py  run_pipeline.py
backend/scripts-old/: generate_sample_data.py  run_pipeline.py  verify_installation.py
backend/tools/: rename_repos.ps1
data/raw/: loto_facil_asloterias_ate_concurso_3576_sorteio.xlsx
docs/: ARCHITECTURE.md
frontend/: .env.example  PRODUCTION_SETUP.md  README.md  app.json  eas.json  package-lock.json  package.json
frontend/app/: _layout.tsx  disclaimer.tsx
frontend/constants/: Colors.ts  Layout.ts  Typography.ts
frontend/hooks/: useHistory.ts  useLatestResult.ts  usePremiumStatus.ts  useStatistics.ts  useSuggestions.ts
frontend/scripts/: update-ip.js
(+50 files in other folders)
